# breps

./: .gitattributes  .gitignore  .gitmodules  BUILD  CMakeLists.txt  WORKSPACE  breps.code-workspace  breps.cppcheck  breps.sublime-project  compile_commands.json  generate_compilation_database.ps1
Unreal/Hedge/: Hedge.sln
Unreal/Hedge/Source/: Hedge.Target.cs  HedgeEditor.Target.cs
Unreal/Hedge/Source/Hedge/: HedgeGameModeBase.cpp  Mesh.h
cpp/: BUILD  CMakeLists.txt
cpp/demos/hello-bgfx/: CMakeLists.txt
cpp/demos/utils/: CMakeLists.txt
cpp/demos/utils/include/: bgfx_util.h  sdl2_util.h
cpp/hedge/: CMakeLists.txt  hedge.cpp  hedge.hpp  hedge_test.cpp
demos/: CMakeLists.txt
demos/Unreal/Hedge/: Hedge.uproject
demos/Unreal/Hedge/Config/: DefaultEngine.ini  DefaultGame.ini
demos/Unreal/Hedge/Source/Hedge/: Hedge.Build.cs  Hedge.cpp  HedgeGameModeBase.h
demos/hello-bgfx/: main.cpp
demos/utils/src/: sdl2_util.cc
hedge/: BUILD  CMakeLists.txt
hedge/cpp/: CMakeLists.txt  hedge.cc  hedge.cpp  hedge.hpp  hedge_test.cc  hedge_test.cpp
hedge/cpp/src/: hedge.cc
hedge/include/: hedge.hpp
hedge/java/: CMakeLists.txt
hedge/src/: default_kernel.cc  hedge.cc  hedge_test.cc
hello/: CMakeLists.txt  main.cpp
mesh/: CMakeLists.txt
notes/: outline.org
presentation/: slides.md
utils/: CMakeLists.txt
utils/include/: bgfx_util.h  sdl2_util.h  types.h  utils.h
utils/src/: bgfx_util.cc  sdl2_util.cc
